docs: storybook pages -> index page

--- a/src/components/button/Button.stories.mdx
+++ b/src/components/button/Button.stories.mdx
@@ -4,7 +4,7 @@ import { Canvas, Meta, Story, ArgsTable } from "@storybook/addon-docs";
 import Button from "./index";
 import { QuestionCircleOutlined, ProfileOutlined } from "@ant-design/icons";
 
-<Meta title="MDX/按钮 Button" component={Button} />
+<Meta title="按钮 Button" component={Button} />
 
 export const Template = (args) => <Button {...args}>Hello Button</Button>;
 
