--- a/src/components/Button/Button.stories.mdx
+++ b/src/components/Button/Button.stories.mdx
@@ -1,7 +1,8 @@
 <!-- Button.stories.mdx-->
 
 import { Canvas, Meta, Story, ArgsTable } from "@storybook/addon-docs";
-import Button from "./index";
+// import Button from "./index";
+import Button from "./button";
 import { QuestionCircleOutlined, ProfileOutlined } from "@ant-design/icons";
 
 <Meta title="按钮 Button" component={Button} />
