--- a/src/components/Button/Button.stories.mdx
+++ b/src/components/Button/Button.stories.mdx
@@ -5,7 +5,7 @@ import { Canvas, Meta, Story, ArgsTable } from "@storybook/addon-docs";
 import Button from "./button";
 import { QuestionCircleOutlined, ProfileOutlined } from "@ant-design/icons";
 
-<Meta title="按钮 Button" component={Button} />
+<Meta title="通用/按钮 Button" component={Button} />
 
 export const Template = (args) => <Button {...args}>Hello Button</Button>;
 
