--- a/src/Welcome.stories.mdx
+++ b/src/Welcome.stories.mdx
@@ -24,6 +24,14 @@ $npm install frc-ui-pro --save
 
 ## 引入样式文件
 
-```ts
+```js
 import "frc-ui-pro/dist/src/styles/global/index.css";
+```
+
+## 使用
+
+```js
+import { Button } from "frc-ui-pro";
+
+ReactDOM.render(<Button>Frc Button</Button>, mountNode);
 ```
